<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/button"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#CD2B1C"
        android:text="@string/Button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TV1"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />
</LinearLayout>