<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hitam">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/putih"
        android:textStyle="bold"
        android:text="@string/login" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:ems="10"
        android:hint="@string/etusername"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:textColorHint="@color/putih"
        android:backgroundTint="@color/putih"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:ems="10"
        android:hint="@string/etpassword"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:minHeight="48dp"
        android:textColorHint="@color/putih"
        android:backgroundTint="@color/putih"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/abu"
        android:text="@string/login"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="108dp"
        android:text="@string/tvregister"
        android:textColor="@color/putih" />
</RelativeLayout>